test/errors/expr_parenthesized_star_generator.py
a = [1]
b = [2]
value = (*x for x in b)
